syntax = "proto3";

package calc;

message CalcRequest {
	int32 number1 = 1;
	int32 number2 = 2;
}

message CalcResult {
	int32 result = 1;
}

service CalcService {
	rpc Calc(CalcRequest) returns (CalcResult);
}